responsive helmets integrated on my teams

--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -170,7 +170,7 @@
                                 <td>3</td>
                                 <td>1000</td>
                                 <td><a href="football_enter_contests.html">
-                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                    <button type="button" class="btn btn-primary btn-sm withdraw">withdraw</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -200,7 +200,7 @@
                                 <td>3</td>
                                 <td>1000</td>
                                 <td><a href="football_enter_contests.html">
-                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                    <button type="button" class="btn btn-primary btn-sm withdraw">withdraw</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
