--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -1301,7 +1301,7 @@
             </div>
           </div>
           <div class="row contests bottom-teams-contests-section">
-            <div class="col-12 col-sm-6 offset-sm-3 col-lg-5 offset-lg-0 col-xl-5 field">
+            <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-lg-5 offset-lg-0 col-xl-5 field">
               <div class="nl-section nl-create-team homepage-field soccer">
                 <div class="row">
                   <div class="col-12 no-padding-mobile text-center">
