--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -126,7 +126,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -236,7 +238,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -346,7 +350,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -456,7 +462,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -566,7 +574,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -676,7 +686,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -786,7 +798,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -896,7 +910,9 @@
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
                       <p>team NLC2</p>
-                      <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                        <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                      </div>
                     </div>
                   </div>
                 </div>
