--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -1249,7 +1249,7 @@
                       <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo" class="vis-hidden">
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet/white-helmet.png" alt="logo" class="vis-hidden">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p class="display-none">Patriots</p>
