--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -626,7 +626,7 @@
                     </div>
                   </div>
                   <div data-position="DEF" class="nl-player-block nl-DEF-position">
-                    <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                    <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img"></div>
                     <div class="nl-player-block--data">
                       <p class="not-playing">PATRIOTS</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
@@ -640,7 +640,7 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>MY NLC2 TEAM</h3><img src="assets/img/helmet.png" alt="helmet">
+                        <h3>MY NLC2 TEAM</h3><img src="assets/img/helmet/white-helmet.png" alt="helmet">
                       </div>
                     </div>
                   </div>
@@ -783,7 +783,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -905,7 +907,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1027,7 +1031,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1149,7 +1155,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1271,7 +1279,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1393,7 +1403,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1515,7 +1527,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1637,7 +1651,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1759,7 +1775,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -1881,7 +1899,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -2003,7 +2023,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
@@ -2125,7 +2147,9 @@
                           <p class="italic">NLC2 Kasper</p>
                         </div>
                         <div class="rank__thumb">
-                          <div id="create-helmet" style="display: block;" class="final-helmet"><img id="helmet" src="assets/img/helmet/red-helmet.png" style="display: block;" class="helmet-img"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                            <div class="oval-letter"><img id="oval" src="assets/img/oval/whiteoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                          </div>
                         </div>
                       </div>
                       <table class="table table-info3">
