made index.html/homepage before login more responsive

--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -34,23 +34,31 @@
         <div class="owl-carousel main-carousel">
           <div class="item nl-slides nl-slide-1">
             <div class="container-fluid">
-              <h2>Draft your line up with NoLimitCoins</h2>
+              <h2>Draft your line up with No Limit Coins</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
           <div class="item nl-slides nl-slide-5">
             <div class="container-fluid circle-JT">
-              <h2>Heads up Fantasy sports for charity</h2>
-              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
+              <div class="row">
+                <div class="col-9 offset-3"><a href="register.html" class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</a>
+                  <h2>Heads up Fantasy sports for charity</h2>
+                </div>
+              </div>
             </div>
           </div>
           <div class="item nl-slides nl-slide-6">
-            <div class="container-fluid circle-JT">
+            <div class="container-fluid JC">
+              <div class="row">
+                <div class="col-9"><a href="register.html" class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</a>
+                  <h2>Win a seat for $20K Sit & Go with Johhny Chan</h2>
+                </div>
+              </div>
             </div>
           </div>
           <div class="item nl-slides nl-slide-3">
             <div class="container-fluid">
-              <h2>Daily Fantasy Soccer with NLC2</h2>
+              <h2>Daily Fantasy Soccer with No Limit Coins</h2>
               <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
             </div>
           </div>
