added good helmet on football create team page

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -1264,7 +1264,10 @@
                   <div class="row">
                     <div class="col-12">
                       <div class="nl-team-card table-data-field">
-                        <h3>team NLC2</h3><img src="assets/img/helmet.png" alt="helmet">
+                        <h3>team NLC2</h3>
+                        <div class="helmet-container"><img id="helmet" src="assets/img/helmet/white-helmet.png" style="display: block;" class="helmet-img">
+                          <div class="oval-letter"><img id="oval" src="assets/img/oval/grayoval.png" style="display: block;" class="img-fluid select-oval"><img id="letter" src="assets/img/letter/n.png" style="display: block;" class="img-fluid select-letter"></div>
+                        </div>
                       </div>
                     </div>
                   </div>
