new field with post and gametime on homepage

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -1953,63 +1953,90 @@
                                 <tbody>
                                   <tr>
                                     <td class="indicated"><span class="played indicator"></span></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">FLEX</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">K</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td class="indicated"><span class="playing indicator"></span></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">RB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">RB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">QB</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">WR</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">WR</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td class="indicated"><span class="not-playing indicator"></span></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">TE</td>
                                     <td>30</td>
                                     <td>$0</td>
                                   </tr>
                                   <tr>
                                     <td></td>
-                                    <td>Player name</td>
+                                    <td>
+                                      <p>Player name</p>
+                                      <p class="gametime">WAS-DAL 09.00 EST</p>
+                                    </td>
                                     <td class="pos">DEF</td>
                                     <td>30</td>
                                     <td>$0</td>
