--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -19,12 +19,12 @@
         <div class="nl-header--top">
           <div class="container-fluid">
             <div class="row align-items-start">
-              <div class="col-4 col-lg-2">
-                <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
-              </div>
-              <div class="col-1 col-lg-6">
-                <div class="nl-title">The worlds first crypto fantasy sports</div>
-              </div>
+               <div class="col-4 col-lg-3">
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/nl-logo.png" alt="NO Limit"></a></div>
+            </div>
+            <div class="col-1 col-lg-5">
+              <div class="nl-title">The world's first crypto fantasy sports</div>
+            </div>
               <div class="col-12 col-lg-4">
                 <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
               </div>
@@ -51,8 +51,17 @@
                       <div class="input-group">
                         <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
                       </div>
+					  
                       <button class="btn btn-primary">LOGIN</button>
                       <p class="forget-password">FORGOT PASSWORD</p><div class="g-recaptcha" data-sitekey="6Lf-kjMUAAAAALqIEnd5dP1T-hQbpXOBPLd1ilJD"></div>
+				
+					  <div class="login-social">
+					   <p><b>OR LOGIN</b></p>
+				       <a href=""><img src="assets/img/login-fb.gif"></a>
+					   <a href=""><img src="assets/img/login-yahoo.gif"></a>
+					   <a href=""><img src="assets/img/login-g.gif"></a>
+					   <a href=""><img src="assets/img/login-in.gif"></a>
+				       </div>
                     </form>
                   </div>
                 </div>
