--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -18,11 +18,11 @@
       <div class="nl-header--top">
         <div class="container-fluid">
           <div class="row align-items-start">
-            <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
+             <div class="col-4 col-lg-3">
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/nl-logo.png" alt="NO Limit"></a></div>
             </div>
-            <div class="col-1 col-lg-6">
-              <div class="nl-title">The worlds first crypto fantasy sports</div>
+            <div class="col-1 col-lg-5">
+              <div class="nl-title">The world's first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-4">
               <div class="nl-button-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
