--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/fixes.css">
   </head>
   <body>
-    <!--include _partials/preloader.jade--->
+    <!--include _partials/preloader.jade-->
      <header class="nl-header-log">
         <div class="nl-header-top">
             <div class="container-fluid">
