Create Team Hockey Update

--- a/create_team_hockey.html
+++ b/create_team_hockey.html
@@ -1233,7 +1233,9 @@
               </div>
               <div class="nl-team-field hockey">
                 <div class="player-main-block hockey">
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/NHL/img-DR.png" alt="DR">
+                  <div data-position="DR" class="nl-player-block nl-DR-position">
+				  <img src="assets/img/nhl-team-logo/19.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-DR.png" alt="DR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1241,7 +1243,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="G" class="nl-player-block nl-G-position"><img src="assets/img/NHL/img-G.png" alt="G">
+                  <div data-position="G" class="nl-player-block nl-G-position">
+				  <img src="assets/img/nhl-team-logo/2.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-G.png" alt="G">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1249,7 +1253,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/NHL/FLEXL.png" alt="FLEXL">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position">
+				  <img src="assets/img/nhl-team-logo/10.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/FLEXL.png" alt="FLEXL">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1257,7 +1263,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/NHL/FLEXR.png" alt="FLEXR">
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position">
+				  <img src="assets/img/nhl-team-logo/12.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/FLEXR.png" alt="FLEXR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1265,7 +1273,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="CL" class="nl-player-block nl-CL-position"><img src="assets/img/NHL/img-CL.png" alt="CL">
+                  <div data-position="CL" class="nl-player-block nl-CL-position">
+				  <img src="assets/img/nhl-team-logo/13.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-CL.png" alt="CL">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1273,7 +1283,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LW" class="nl-player-block nl-LW-position"><img src="assets/img/NHL/img-LW.png" alt="LW">
+                  <div data-position="LW" class="nl-player-block nl-LW-position">
+				  <img src="assets/img/nhl-team-logo/11.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-LW.png" alt="LW">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1281,7 +1293,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RW" class="nl-player-block nl-RW-position"><img src="assets/img/NHL/img-RW.png" alt="RW">
+                  <div data-position="RW" class="nl-player-block nl-RW-position">
+				  <img src="assets/img/nhl-team-logo/22.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-RW.png" alt="RW">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1289,7 +1303,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="CR" class="nl-player-block nl-CR-position"><img src="assets/img/NHL/img-CR.png" alt="CR">
+                  <div data-position="CR" class="nl-player-block nl-CR-position">
+				  <img src="assets/img/nhl-team-logo/35.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-CR.png" alt="CR">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>gronkowski</p>
@@ -1297,7 +1313,9 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/NHL/img-DL.png" alt="logo">
+                  <div data-position="DL" class="nl-player-block nl-DL-position">
+				  <img src="assets/img/nhl-team-logo/35.png" alt="goalkeeper" class="flag-logo-nhl" data-toggle="tooltip" data-placement="top" title="Team Name">
+				  <img src="assets/img/NHL/img-DL.png" alt="logo">
                     <div class="nl-player-block--data">
                       <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
                       <p>Patriots</p>
