Homepage Coin Update

--- a/homepage_coin.html
+++ b/homepage_coin.html
@@ -1647,7 +1647,7 @@
                </div>
                <div class="row contests bottom-teams-contests-section">
                   <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-lg-5 offset-lg-0 col-xl-5 field">
-                     <div class="nl-section nl-create-team homepage-field crypto">
+                     <div class="nl-section nl-create-team homepage-field soccer">
                         <div class="row">
                            <div class="col-12 no-padding-mobile text-center">
                               <h5>MY TEAMS</h5>
@@ -2185,6 +2185,54 @@
 			  <div class="modal-content">
 				<div class="row">
 				  <div class="col-10 offset-1">
+					<h4 class="modal-title orange"><span>Please login or register</span></h4>
+				  </div>
+				  <div class="exit-button"> 
+					<button type="button" data-dismiss="modal" class="close">×</button>
+				  </div>
+				</div>
+				<div class="modal-body">
+				<p>To create teams or purchase nolimitcoin our platform please either login to your existing account or register now and get 10 nlc2 for free.</p>
+				<div class="row justify-content-center">
+				   <div class="col-md-6">
+				     <form class="form-signin">
+                      <div class="form-group">
+                        <input id="inputEmail" type="email" placeholder="EMAIL" required="" autofocus="" class="form-control">
+                      </div>
+                      <div class="form-group">
+                        <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control">
+                      </div>
+					  
+					  <div class="form-group">
+                       Captcha Code
+                      </div>
+					  
+					  <div class="row">
+					   <div class="col-6 text-left"><button class="btn btn-primary">LOGIN</button></div>
+					   <div class="col-6 text-right"><button class="btn btn-primary">Register</button></div>
+					  </div>
+					  <div class="login-social mt-2">
+					   <p><b>OR LOGIN</b></p>
+				       <a href=""><img src="assets/img/login-fb.gif"></a>
+					   <a href=""><img src="assets/img/login-yahoo.gif"></a>
+					   <a href=""><img src="assets/img/login-g.gif"></a>
+					   <a href=""><img src="assets/img/login-in.gif"></a>
+				       </div>
+                    </form>
+				   </div>
+				</div>
+				<button type="button" class="btn btn-default mt-3">Take a look around the paltform</button>
+				<button type="button" class="btn btn-default mt-3">What is Fantasy Sports?</button>
+				</div>
+			  </div>
+			</div>
+		</div>
+		
+		<!--<div id="crypto-explained" role="dialog" data-backdrop="static" data-keyboard="false" class="modal fade">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="row">
+				  <div class="col-10 offset-1">
 					<h4 class="modal-title orange"><span>Fantasy Crypto explained:</span></h4>
 				  </div>
 				  <div class="exit-button"> 
@@ -2205,7 +2253,7 @@
 				</div>
 			  </div>
 			</div>
-		</div>
+		</div>-->
 
       <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer=""></script>
       <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
