Index Page Update

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       <div class="nl-header--slide">
         <div class="owl-carousel main-carousel">
 		
+		  <div class="item nl-slides nl-slide-baseball">
+            <div class="container-fluid">
+              <h2>DFS Fantasy Baseball<br>coming soon</h2>
+              <div class="btn btn-primary btn-lg nl-m-t-40">SIGN UP</div>
+            </div>
+          </div>
+		
 		  <div class="item nl-slides nl-slide-nba">
             <div class="container-fluid">
               <h2>PLAY FANTASY<br>BASKETBALL TODAY</h2>
