--- a/contests.html
+++ b/contests.html
@@ -144,9 +144,12 @@
                           <thead>
                             <tr>
                               <th>Contests name</th>
+							  <th>SLATE</th>
+							  <th>NLC/$</th>
                               <th>Buy-In</th>
                               <th>TEAMs</th>
-                              <th>week</th>
+                              <th>START</th>
+							  <th>MAX TEAM</th>
                               <th>Payout</th>
                               <th>ENTRY</th>
                               <th>Status</th>
@@ -158,15 +161,109 @@
                             <tbody>
                               <tr>
                                 <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>SUNDAY</td>
+								<td><img src="assets/img/nlc2_icon.png"></td>
                                 <td>10</td>
                                 <td>71/100</td>
-                                <td>3</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
                                 <td>1000</td>
                                 <td><a href="" data-toggle="modal" data-target="#enterModal">
                                     <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
-                              <tr>
+							   <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>THO-MON</td>
+								<td><img src="assets/img/dollar_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							  <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>SUNDAY</td>
+								<td><img src="assets/img/nlc2_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							   <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>THO-MON</td>
+								<td><img src="assets/img/dollar_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							  <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>SUNDAY</td>
+								<td><img src="assets/img/nlc2_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							   <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>THO-MON</td>
+								<td><img src="assets/img/dollar_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							  <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>SUNDAY</td>
+								<td><img src="assets/img/nlc2_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+							   <tr>
+                                <td>WK3 G Joe Theismann 5 team Challenge</td>
+								<td>THO-MON</td>
+								<td><img src="assets/img/dollar_icon.png"></td>
+                                <td>10</td>
+                                <td>71/100</td>
+                                <td>09 Dec 23:30</td>
+								<td>0 / 1</td>
+                                <td>1000</td>
+                                <td><a href="" data-toggle="modal" data-target="#enterModal">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
+                                <td>STARTED</td>
+                              </tr>
+                              <!--<tr>
                                 <td>WK3 G Joe Theismann 5 team Challenge</td>
                                 <td>10</td>
                                 <td>71/100</td>
@@ -308,7 +405,7 @@
                                 <td>1000</td>
                                 <td></td>
                                 <td class="st-full">FULL</td>
-                              </tr>
+                              </tr>-->
                             </tbody>
                           </table>
                         </div>
