Fantasy Crypto Homepage Update

--- a/homepage_coin.html
+++ b/homepage_coin.html
@@ -2209,7 +2209,7 @@
 					  
 					  <div class="form-group d-flex">
                         <img id="m_imgCaptcha" alt="Click to Change image" src="assets/img/capcha.png" style="width: 200px;height:38px;">
-                        <a href="javascript:void(0)" onclick="loadCaptcha()" class="btn btn-sm btn-primary mt-2"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+                        <a href="javascript:void(0)" onClick="loadCaptcha()" class="btn btn-sm btn-primary mt-2"><i class="fa fa-refresh" aria-hidden="true"></i></a>
                         <input class="form-control" id="CaptchaImagetext" autocomplete="off" name="CaptchaImagetext" placeholder="Enter the text" type="text" value="">
                       </div>
 					  
