Index Page Update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
 			<!--<div class="col-lg-2 hidden-md-down live-price">NLC-BTC : 0.00002015<br />NLC-USD : 0.17019</div>-->
             <div class="col-12 col-lg-4">
-              <div class="nl-button-login"><a href="login.html" class="btn btn-primary buttons-index nl-m-r-15">Login</a><a href="register.html" class="btn buttons-index">SIGN UP</a></div>
+              <div class="nl-button-login"><a href="login.html" class="btn btn-primary buttons-index nl-m-r-15">Login</a><a href="register.html" class="btn buttons-index">SIGN UP</a><a href="register.html" class="btn buttons-index hide-mobile">View Contests</a>
+			  </div>
             </div>
           </div>
         </div>
