NFL players page update

--- a/players_football.html
+++ b/players_football.html
@@ -936,10 +936,9 @@
                           <tr>
                             <th class="name-players-table">NAME</th>
                             <th>SALARY</th>
-                            <th>FP</th>
+                            <th>AVG</th>
                             <th>STATUS</th>
                             <th>POS</th>
-                            <th>LEAGUE</th>
                             <th>TEAM</th>
                             <th>OPP</th>
                             <th>Gameday</th>
@@ -957,7 +956,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/NFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -972,7 +970,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/NFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -987,7 +984,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1002,7 +998,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1017,7 +1012,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/NFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1032,7 +1026,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/NFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1047,7 +1040,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1062,7 +1054,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1077,7 +1068,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1092,7 +1082,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1107,7 +1096,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1122,7 +1110,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1137,7 +1124,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1152,7 +1138,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1167,7 +1152,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1182,7 +1166,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
@@ -1197,7 +1180,6 @@
                               <td>28.33</td>
                               <td class="act">ACT</td>
                               <td>TE</td>
-                              <td class="flag"><img src="assets/img/AFC.png" alt="USA"></td>
                               <td>PAT</td>
                               <td>SEA</td>
                               <td>09/17/17 11:00 PM</td>
